--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan - WDD 230 - Web Frontend Development</title>
+    <title>Dylan Petersen - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development - Dylan - course assignment portal">
     <link rel="stylesheet" href="styles/base.css">
 </head>
