--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="images/theotherone.JPG" alt="logo"> 
-        <h1> Luke Briggs </h1>
+        <h1> Dylan Petersen </h1>
     </header>
     <nav>
         <a href="#">Home</a>             
@@ -24,19 +24,30 @@
         <section class="card">
             <h3> Learning Activities </h3>
             <ul>
-                <li>
-                   <a href="#"></a> 
-                </li>
+                <li>Week 1: <a href="./week1/holygrail.html">HolyGrail</a> </li>
+                <li>Week 2: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 3: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 4: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 5: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 6: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 7: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 8: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 9: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 10: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 11: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 12: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 13: <a href="./week1/holygrail.html"></a> </li>
+
             </ul>
+        </section>
         <section class="card">
-            <h3> information </h3>
-                    
+            <h3> Information </h3>
         </section>
         </main>
     </main>
     <footer>
-        <p>&copy; - Luke Briggs 🇺🇸 </p>
-        <p2 id="lastModified"></p2>
+        <p> &copy; <span id="currentYear"></span> Dylan Petersen Nevada </p>
+        <p id="lastModified"></p> 
     </footer>
 
     <script src="scripts/getdates.js"></script>
