--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dylan Petersen - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development - Dylan - course assignment portal">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     <header>
@@ -13,11 +14,13 @@
         <h1> Dylan Petersen </h1>
     </header>
     <nav>
-        <a href="#">Home</a>             
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/66?lang=eng#p6" target="_blank">Scripture</a>
+        <ul>
+            <li><a href="#">Home</a> </li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/66?lang=eng#p6" target="_blank">Scripture</a></li>
+        </ul>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
@@ -42,6 +45,8 @@
         </section>
         <section class="card">
             <h3> Information </h3>
+            <h4> ☀️ Las Vegas, Nevada </h4>
+            <p> Visits to page: </p>
         </section>
         </main>
     </main>
