--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>Week 1: <a href="./week1/holygrail.html">HolyGrail</a> </li>
                 <li>Week 2: <a href="./week1/holygrail.html"></a> </li>
-                <li>Week 3: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 3: <a href="./images/combinations.jpg">Combination Exercise</a> </li>
                 <li>Week 4: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 5: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 6: <a href="./week1/holygrail.html"></a> </li>
@@ -48,7 +48,6 @@
             <h4> ☀️ Las Vegas, Nevada </h4>
             <p> Visits to page: </p>
         </section>
-        </main>
     </main>
     <footer>
         <p> &copy; <span id="currentYear"></span> Dylan Petersen Nevada </p>
