added an hamburger menu for my navigation menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <img src="images/theotherone.JPG" alt="logo"> 
         <h1> Dylan Petersen </h1>
     </header>
-    <nav>
+    <button id="menu"></button>
+    <nav class="navigation">
         <ul>
             <li><a href="#">Home</a> </li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
