--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li>Week 2: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 3: <a href="./images/combinations.jpg">Combination Exercise</a> </li>
                 <li>Week 4: <a href="./lesson03/chamber-site-plan.html" target="_blank">Chamber site plan</a> </li>
-                <li>Week 5: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 5: <a href="./lesson05/bom.html" target="_blank"> BOM Activity</a></li>
                 <li>Week 6: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 7: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 8: <a href="./week1/holygrail.html"></a> </li>
