--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Las Vegas Chamber of Commerce</title>
-    <link rel="stylesheet" href="styles/base.css">
-</head>
-<body>
-    <header>
-        <img src="images/vegaschamber.png" alt="logo">
-        <h1>Las Vegas Chamber of Commerce</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Las Vegas Chamber of Commerce</title>
+        <link rel="stylesheet" href="styles/base.css">
+    </head>
+    <body>
+        <header>
+            <img src="images/vegaschamber.png" alt="logo">
+            <h1>Las Vegas Chamber of Commerce</h1>
+            <button onclick="myFunction()">Toggle dark mode</button>
         <nav class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,27 +24,41 @@
         <img class= "hero" src="images/hero.jpeg" alt="Main pic of las vegas">
     </section>
     <hr>
-    <section class="section2"> 
-        <h2>Events</h2>
-        <p>________________________________________________________</p>
-        <p>Join us March 24th and help us plant over 1000 trees at Floyd Lamb Park </p>
+
+    <main>
+        <section class="section2"> 
+            <h2>Events</h2>
+            <p>Join us at our beautiful park at Floyd Lamb Park and help us plant tons of trees!</p>
+            <p>When: March 23, 2023 at noon.</p>
+            <p>Location: Floyd Lamb Park </p>
+            <img src="images/trees.jpeg" alt="trees">
+        </section>
+        <section class="section3"> 
+            <h3>Weather</h3>
+            <p>☀️ Mostly Sunny </p>
+            <p>89°</p>
+            <p>Humidity: 3%</p>
+        </section>
     </section>
-    <section class="section3"> 
-        <h3>Weather</h3>
-        <p>☀️ Mostly Sunny </p>
-        <p>89°</p>
-        <p>Humidity: 3%</p>
-        <p>Wind Chill: 0%</p>
-    </section>
-    <section class="section4">
-        <h4>Thank You</h4>
-        <p>We love all of our people in the wonderful city of Las Vegas! We thank you for your continued support and we will do anything to keep this city as great as it can be!</p>
-    </section>
+</main>
+<footer>
+    <h4> Follow our socials!</h4>
+    <div class="socials">
+        <a href="https://www.facebook.com/vegaschamber/" target="_blank">
+            <img src="images/facebook copy.png" alt="facebook icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram copy.png" alt="instagram icon">
+        </a>
+        <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
+            <img src="images/twitter copy.png" alt="twitter icon">
+        </a>
+    </div>
+    
     <section class="section5">
-        <h5>Contact us</h5>
         <p>Email: fakeemail@gmail.com</p>
         <p>Phone: 123-456-7891</p>
-    </section>
-
+</footer>
+<script src="scripts/scripts.js"></script>
 </body>
 </html>
