added a hero image to my website. havent finished yet

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
             <p>Join us at our beautiful park at Floyd Lamb Park and help us plant tons of trees!</p>
             <p>When: March 23, 2023 at noon.</p>
             <p>Location: Floyd Lamb Park </p>
-            <img src="images/trees.jpeg" alt="trees">
+            <img src="images/trees.jpeg" alt="trees" style="width: auto;">
         </section>
         <section class="section3"> 
             <h3>Weather</h3>
