--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
         <ul>
             <li><a href="#">Home</a> </li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="chamber/" target="_blank">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/66?lang=eng#p6" target="_blank">Scripture</a></li>
         </ul>
     </nav>
     <main>
+        <div  id="hero">
+            <picture>
+                <source media="(max-width: 400px)" srcset="/images/temple-small.webp">
+                <source media="(max-width: 1600px)" srcset="/images/temple-medium.webp">
+                <source media="(min-width: 2000px)" srcset="/images/temple-large.webp">
+                <img src="/images/temple-large.webp" alt="Temple picture" style="width: auto;">
+            </picture>
+            <div id="herolabel">
+                <p>Logan, Utah Temple</p>
+            </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3> Learning Activities </h3>
