--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Las Vegas Chamber of Commerce</title>
         <link rel="stylesheet" href="styles/base.css">
+        <link rel="icon" href="./images/vegaschamber.png" type="image/x-icon">
+
+        <meta property="og:title" content="Your Page Title">
+        <meta property="og:description" content="Your page description">
+        <meta property="og:image" content="URL to your image">
+        <meta property="og:url" content="URL of your page">
+        <meta property="og:type" content="website">
     </head>
     <body>
         <header>
