created the discover page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
         <nav class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Discovery</a></li>
+                <li><a href="discover.html">Discovery</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
             </ul>
@@ -38,23 +38,24 @@
     <hr>
 
     <main>
-        <section class="section2"> 
-            <h2>Events</h2>
-            <p>Join us at our beautiful park at Floyd Lamb Park and help us plant tons of trees!</p>
-            <p>When: March 23, 2023 at noon.</p>
-            <p>Location: Floyd Lamb Park </p>
-            <img src="images/trees.jpeg" alt="trees" style="width: auto;">
-        </section>
-        <section class="section3"> 
-            <h3>Information</h3>
-            <p>☀️ Mostly Sunny </p>
-            <p>Temperature: 45°</p>
-            <p>Humidity: 3%</p>
-            <p>Windspeed: 5.0 mph </p>
-            <p>Windchill: </p>
-            <p> <span class="label"> Number of Visits: </span><span class="visits"></span></p>
-        </section>
-    </section>
+        <div class="mainsection">
+            <section class="section2"> 
+                <h2>Events</h2>
+                <p>Join us at our beautiful park at Floyd Lamb Park and help us plant tons of trees!</p>
+                <p>When: March 23, 2023 at noon.</p>
+                <p>Location: Floyd Lamb Park </p>
+                <img src="images/trees.jpeg" alt="trees" style="width: auto;">
+            </section>
+            <section class="section3"> 
+                <h3>Information</h3>
+                <p>☀️ Mostly Sunny </p>
+                <p>Temperature: 45°</p>
+                <p>Humidity: 3%</p>
+                <p>Windspeed: 5.0 mph </p>
+                <p>Windchill: </p>
+                <p> <span class="label"> Number of Visits: </span><span class="visits"></span></p>
+            </section>
+        </div>    
 </main>
 <footer>
     <h4> Follow our socials!</h4>
