--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <li>Week 5: <a href="./lesson05/bom.html" target="_blank"> BOM Activity</a></li>
                 <li>Week 6: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 7: <a href="./presentation/specificity.html" target="_blank">Presentation</a> </li>
-                <li>Week 8: <a href="./week1/holygrail.html"></a> </li>
-                <li>Week 9: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 9: <a href="form.html" target="_blank">Form</a> </li>
                 <li>Week 10: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 11: <a href="./week1/holygrail.html"></a> </li>
                 <li>Week 12: <a href="./week1/holygrail.html"></a> </li>
