--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,10 +20,10 @@
             <button onclick="myFunction()">Toggle dark mode</button>
         <nav class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="index.html">Discovery</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discovery</a></li>
                 <li><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
             </ul>
         </nav>
     </header>
