--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <section class="card">
             <h3> Learning Activities </h3>
             <ul>
-                <li>Week 1: <a href="./week1/holygrail.html">HolyGrail</a> </li>
-                <li>Week 2: <a href="./week1/holygrail.html"></a> </li>
+                <li>Week 1: <a href="./lesson01/">HolyGrail</a> </li>
+                <li>Week 2: <a href="./lesson01/holygrail.html"></a> </li>
                 <li>Week 3: <a href="./images/combinations.jpg">Combination Exercise</a> </li>
                 <li>Week 4: <a href="./lesson03/chamber-site-plan.html" target="_blank">Chamber site plan</a> </li>
                 <li>Week 5: <a href="./lesson05/bom.html" target="_blank"> BOM Activity</a></li>
