created the directory page for the chamber website. also updated the nav bar with the correct links.

--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prophets</title>
-    <link rel="stylesheet" href="styles/prophets.css">
-    <script src="scripts/prophets.js" defer></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles/prophets.css">
+    <script src="./scripts/prophets.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <div id="cards"></div>
       </main>
       <footer>
-        [Enter Your Name Here] | Latter-day Prophets
+        Luke | Latter-day Prophets
       </footer>
 </body>
 </html>
