fixed some errors

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Las Vegas Chamber of Commerce</title>
+        <title>Directory of Members - Las Vegas Chamber of Commerce</title>
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="./images/vegaschamber.png" type="image/x-icon">
 
@@ -76,19 +76,22 @@
     <h4> Follow our socials!</h4>
     <div class="socials">
         <a href="https://www.facebook.com/vegaschamber/" target="_blank">
-            <img src="images/facebook copy.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram copy.png" alt="instagram icon">
+            <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
-            <img src="images/twitter copy.png" alt="twitter icon">
+            <img src="images/twitter.png" alt="twitter icon">
         </a>
     </div>
     
     <section class="section5">
-        <p>Email: fakeemail@gmail.com</p>
-        <p>Phone: 123-456-7891</p>
+        <div>
+            <p>Email: fakeemail@gmail.com</p>
+            <p>Phone: 123-456-7891</p>
+        </div>
+    </section>
 </footer>
 <script src="scripts/scripts.js"></script>
 <script src="scripts/windchill.js"></script>
