--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Las Vegas Chamber of Commerce</title>
+        <title>Directory of Members - Las Vegas Chamber of Commerce</title>
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="./images/vegaschamber.png" type="image/x-icon">
 
