fixed more errors because i suck at this

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,13 +61,13 @@
     <h4> Follow our socials!</h4>
     <div class="socials">
         <a href="https://www.facebook.com/vegaschamber/" target="_blank">
-            <img src="images/facebook copy.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram copy.png" alt="instagram icon">
+            <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
-            <img src="images/twitter copy.png" alt="twitter icon">
+            <img src="images/twitter.png" alt="twitter icon">
         </a>
     </div>
     
