updated my weather section on my home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,6 +28,12 @@
                 </ul>
             </nav>
         </header>
+        <div id="banner" class="banner">
+            <div class="banner-content">
+                <span class="close" id="closeBanner">&times;</span>
+                <p>Don't miss our Chamber of Commerce meet and greet on Wednesday at 7:00 p.m.!</p>
+            </div>
+        </div>
     <section class="section1">
         <picture>
             <source media="(max-width: 425px)" srcset="./images/hero-smol.webp" loading lazy="lazy">
@@ -75,6 +81,7 @@
         <p>Email: fakeemail@gmail.com</p>
         <p>Phone: 123-456-7891</p>
 </footer>
+<script src="scripts/banner.js"></script>
 <script src="scripts/scripts.js"></script>
 <script src="scripts/windchill.js"></script>
 <script src="scripts/weather.js"></script>
