Made alot of changes and updates to the chamber site

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -73,25 +73,31 @@
     </script>
 </main>
 <footer>
-    <h4> Follow our socials!</h4>
-    <div class="socials">
-        <a href="https://www.facebook.com/vegaschamber/" target="_blank">
-            <img src="images/facebook.png" alt="facebook icon">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
-        <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-    </div>
-    
-    <section class="section5">
-        <p>Email: fakeemail@gmail.com</p>
-        <p>Phone: 123-456-7891</p>
-    </section>
+    <p>Created by: Dylan Petersen</p>
+    <p>Course: WDD 230</p>
+    <!-- <p>Last modified: <span id="lastModified"></span></p> -->
+    <p id="lastModified"></p>
+<div class="socials">
+    <a href="https://www.facebook.com/vegaschamber/" target="_blank">
+        <img src="images/facebook.png" alt="facebook icon">
+    </a>
+    <a href="https://instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="instagram icon">
+    </a>
+    <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
+        <img src="images/twitter.png" alt="twitter icon">
+    </a>
+</div>
+
+<section class="section5">
+    <p>Email: petersendylan2000@gmail.com</p>
+    <p>Phone: 725-249-7357</p>
 </footer>
+<script src="scripts/membershipShowcase.js"></script>
+<script src="scripts/lastmodified.js"></script>
 <script src="scripts/scripts.js"></script>
+<script src="scripts/banner.js"></script>
 <script src="scripts/windchill.js"></script>
+<script src="scripts/weather.js"></script>
 </body>
 </html>
