--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Directory of Members - Las Vegas Chamber of Commerce</title>
+        <title>Discover- Las Vegas Chamber of Commerce</title>
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="./images/vegaschamber.png" type="image/x-icon">
 
@@ -28,6 +28,7 @@
         </nav>
     </header>
     <main>
+        <p id="visit-message"></p>
         <div class="sidebar" id="sidebarContent"> </div>
         <div class="sidebar">
             <section class="sidebar1">
@@ -87,23 +88,30 @@
 
     </main>
 <footer>
+    <p>Created by: Dylan Petersen</p>
+        <p>Course: WDD 230</p>
+        <!-- <p>Last modified: <span id="lastModified"></span></p> -->
+        <p id="lastModified"></p>
     <h4> Follow our socials!</h4>
     <div class="socials">
         <a href="https://www.facebook.com/vegaschamber/" target="_blank">
-            <img src="images/facebook copy.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram copy.png" alt="instagram icon">
+            <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Flvchamber" target="_blank">
-            <img src="images/twitter copy.png" alt="twitter icon">
+            <img src="images/twitter.png" alt="twitter icon">
         </a>
     </div>
     
     <section class="section5">
-        <p>Email: fakeemail@gmail.com</p>
-        <p>Phone: 123-456-7891</p>
+        <p>Email: petersendylan2000@gmail.com</p>
+        <p>Phone: 725-249-7357</p>
 </footer>
+<script src="scripts/lastmodified.js"></script>
+<script src="scripts/membershipShowcase.js"></script>
+<script src="scripts/daysbetween.js"></script>
 <script src="scripts/scripts.js"></script>
 <script src="scripts/windchill.js"></script>
 </body>
