--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,11 +10,12 @@
 
         <link rel="icon" href="./images/vegaschamber.png" type="image/x-icon">
 
-        <meta property="og:title" content="Your Page Title">
-        <meta property="og:description" content="Your page description">
-        <meta property="og:image" content="URL to your image">
-        <meta property="og:url" content="URL of your page">
+        <meta property="og:title" content="Las Vegas Chamber of Commerce">
+        <meta property="og:description" content="To tell people about the city of Las Vegas and how to get involved">
+        <meta property="og:image" content="./images/vegaschamber.png">
+        <meta property="og:url" content="https://dylanpeter.github.io/wdd230/">
         <meta property="og:type" content="website">
+        <meta name="author" content="Dylan Petersen">
     </head>
     <body>
         <header>
@@ -23,7 +24,7 @@
             <button onclick="myFunction()">Toggle dark mode</button>
             <button class="hamburger" onclick="toggleMenu()">☰</button> <!-- Hamburger button -->
 
-            <nav class="navigation">
+            <nav class="navigation" >
                 <ul>
                     <p> <span class="label"> Number of Visits: </span><span class="visits"></span></p>
                     <li><a href="index.html">Home</a></li>
@@ -68,9 +69,15 @@
                 <div id="weather-info">
                     <h2>Current Weather</h2>
                     <p id="current-temp"></p>
+                    <p id="wind-chill-info">Wind Chill: <span id="wind-chill-value">0</span> °F</p>
                     <p id="weather-description"></p>
                     <h2>Three Day Forecast</h2>
-                    <ul id="forecast-list"></ul>
+                    <ul id="forecast-list">
+                        <li>Day 1 Forecast: Sunny</li>
+                        <li>Day 2 Forecast: Cloudy</li>
+                        <li>Day 3 Forecast: Rainy</li>
+                    </ul>
+
                 </div>
             </section>
         </div>    
