--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,8 +54,8 @@
         <div class="mainsection">
             <section class="section2"> 
                 <h2>Events</h2>
-                <button class="join"><a href="./join.html">Join</a></button> <!-- Hamburger button -->
-                <p>Join us at our beautiful park at Floyd Lamb Park and help us plant tons of trees!</p>
+                <button class="join"><a href="./join.html">Join</a></button> 
+                <p>Join us at our beautiful park at Floyd Lamb Park and help us plant trees!</p>
                 <p>When: March 23, 2023 at noon.</p>
                 <p>Location: Floyd Lamb Park </p>
                 <img src="images/trees.jpeg" alt="trees" style="width: auto;">
