--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,10 +50,10 @@
 
                     item.innerHTML = `
                         <h2>${member.name}</h2>
-                        <p>Address: ${member.address}</p>
-                        <p>Phone: ${member.phone}</p>
-                        <p>Website: <a href="${member.website}" target="_blank">${member.website}</a></p>
-                        <img src="images/${member.image}" alt="${member.name}" width="100">
+                        <p>${member.address}</p>
+                        <p>${member.phone}</p>
+                        <p><a href="${member.website}" target="_blank">${member.website}</a></p>
+                        <img src="${member.image}" alt="${member.name}" width="300" height="100"> <!-- Update this line -->
                         <p>Membership Level: ${member.membershipLevel}</p>
                         <p>${member.otherInfo}</p>
                     `;
