created the form submission page to pull from the url

--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <title>Form</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/form.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     
@@ -25,7 +26,7 @@
     <form action="record.html" method="get">
         <!-- Username -->
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="Username" name="username" required><br><br>
 
         <!-- Password -->
         <label for="password">Password:</label><br>
