--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <button id="menu"></button>
     <nav class="navigation">
         <ul>
-            <li><a href="#">Home</a> </li>
+            <li><a href="index.html">Home</a> </li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="chamber/" target="_blank">Chamber</a></li>
             <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="form.html" target="_blank">Form</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/66?lang=eng#p6" target="_blank">Scripture</a></li>
         </ul>
     </nav>
