--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <header>
-        <header class="jumbotron">
+        <header class="bigpic">
             <div class="container">
-                <div class="jumboback">
+                <div class="bigpicbehind">
                     <h1>Welcome to Bountiful Foods!</h1>
                     <p>We got the freshest smoothies in town!</p>
                 </div>
