--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -19,9 +19,9 @@
 <!-- this is a comment -->
 <body>
     <header>
-        <header class="bigpic">
+        <header class="hero">
             <div class="container">
-                <div class="bigpicbehind">
+                <div class="behind-hero">
                     <h1>Bountiful Foods!</h1>
                     <p>We got the freshest smoothies in town!</p>
                 </div>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="nav-header">
                 <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-                <a href="index.html" class="logo">Bountiful Foods</a>
+                <a href="index.html" class="logo"></a>
             </div>
             <div class="nav-collapse" id="nav-collapse">
                 <ul class="nav-links">
@@ -48,26 +48,23 @@
 
     <div class="container">
         <section>
-            <h2 class="section-heading">Our Products</h2>
+            <h2 class="section-heading"></h2>
             <div class="grid">
 
                 <div class="card" id="card-info">
                     <h3> Santa Monica, CA</h3>
                     <h4>Population:</h4>
-                    <p>89,947</p>                    
+                    <p>89,947</p>     
+                    <br>               
                     <h4>Average Temperature:</h4>
                     <p>64 °F</p>
+                    <br>
                     <h4>Attractions:</h4>
                     <p>Santa Monica Pier</p>
-                    <p>The Bungalow: Beach house-style bar with cozy couches, funky art, and bohemian decor</p>
-                    <h4>The locals here love:</h4>
-                    <h4>Restaurants</h4>
-                    <p>Chez Jay: A historical landmark with steaks, seafood, and cocktails</p>
-                    <p>El Cholo: Authentic Mexican restaurant that's been serving the local community for over a century</p>
-                    <p>Bay Cities Italian Deli: Gourmet market and sandwich shop that's been serving locals since 1925</p>
-                    <h4>Parks</h4>
-                    <p>Clover Park: Has a plethora of activities for kids and adults alike</p>
-                    <p>Palisades Park: 26.4-acre park situated atop the bluffs along Ocean Avenue</p>
+                    <br>
+                    <h4>The locals recommend:</h4>
+                    <p>Chez Jay: A historical restaurant with steaks, seafood, and cocktails.</p>
+                    <p>Clover Park: Has a plethora of activities for kids and adults alike.</p>
                 </div>
                 <!-- Order 1 -->
                 <div class="card">
@@ -85,38 +82,33 @@
                 <div class="card">
                     <h3 id="special">Drinks Ordered:</h3>
                     <p id="drinks-ordered"></p>
+                    <div class="card">
+                            <picture>
+                                <source srcset="./images/mango-smoothie-Large.webp" media="(max-width:500px)">
+                                <source srcset="./images/mango-smoothie-Medium.webp" media="(max-width:1000px)">
+                                <img loading="lazy" src="./images/mango-smoothie.webp" alt="mango smoothie">
+                            </picture>
+                        </a>
+                    </div>  
                 </div>
                 <!-- Order 2 -->
-                <div class="card">
-                    <a href="order.html" title="Order page">
-                        <picture>
-                            <source srcset="./images/mango-smoothie-Large.webp" media="(max-width:500px)">
-                            <source srcset="./images/mango-smoothie-Medium.webp" media="(max-width:1000px)">
-                            <img loading="lazy" src="./images/mango-smoothie.webp" alt="mango smoothie">
-                        </picture>
-                    </a>
-                </div>  
                 <!-- Weather -->
-                <div class="card" id="current-weather">
+                <div class="card" id="weather">
                     <div class="backcolor">
-                        <h2>Current Weather</h2>
-                        <p id="temp-box"><span><img id="current-weather-icon" src="./images/favicon_io/favicon.ico" alt="Icon to show the current weather condition"></span> <span id="current-temp">Loading...</span></p>
-                        <p><span id="weather-description">Loading...</span></p>
-                        <p>Humidity: <span id="humidity">Loading...</span></p>
-                    </div>
-                </div>
-
-                <!-- 3 day forcast -->
-                <div class="card" id="forecast">
-                    <div class="backcolor">
-                        <h2>3 Day Forecast</h2>
-                        <div id="weather-forecast">
-
-                            <!-- Forecast data will be dynamically added here -->
+                        <!-- Current Weather -->
+                        <div class="current-weather">
+                            <h3>Current Weather</h3>
+                            <p id="temp-box"><span><img id="current-weather-icon" src="./images/favicon_io/favicon.ico" alt="Icon to show the current weather condition"></span> <span id="current-temp">Loading...</span></p>
+                            <p><span id="weather-description">Loading...</span></p>
+                            <p>Humidity: <span id="humidity">Loading...</span></p>
+                        </div>
+                        <!-- 3 Day Forecast -->
+                        <div class="forecast">
+                            <h3>3 Day Forecast</h3>
+                            <div id="weather-forecast"> </div>
                         </div>
                     </div>
-                </div>
-            </div>    
+                </div>  
         </section>
     </div>
 <footer class="footer">
