changed the colors

--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -40,7 +40,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="order.html">Order</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="confirm.html">Confirm</a></li>
+                    <!-- <li><a href="confirm.html">Confirm</a></li> -->
                 </ul>
             </div>
         </div>
