--- a/BountifulFoods/order.html
+++ b/BountifulFoods/order.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="nav-header">
             <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-            <a href="index.html" class="logo">Bountiful Foods</a>
+            <a href="index.html" class="logo"></a>
         </div>
         <div class="nav-collapse" id="nav-collapse">
             <ul class="nav-links">
@@ -39,28 +39,28 @@
         <input type="hidden" id="submitDate" name="submitDate">
 
         <!-- first name -->
-        <label for="first_name">First Name:</label><br>
-        <input type="text" id="first_name" name="first_name" required><br><br>
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name" required>
 
         <!-- Email -->
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
     
         <!-- Phone number -->
-        <label for="phone">Phone:</label><br>
-        <input type="text" id="phone" name="phone" required><br><br>
+        <label for="phone">Phone:</label>
+        <input type="text" id="phone" name="phone" required>
 
         <!-- Fruits -->
         <p>Select 3 fruits for your drink.</p>
         <label for="fruit1">Fruit 1</label>
         <select id="fruit1" name="fruit1" class="fruit-dropdown" required>
             <option value="">Select one of the following</option>
-        </select><br><br>
+        </select>
 
         <label for="fruit2">Fruit 2</label>
         <select id="fruit2" name="fruit2" class="fruit-dropdown" required>
             <option value="">Select one of the following</option>
-        </select><br><br>
+        </select>
 
         <label for="fruit3">Fruit 3</label>
         <select id="fruit3" name="fruit3" class="fruit-dropdown" required>
@@ -68,7 +68,7 @@
         </select><br><br>
 
          <!-- special istructions -->
-        <label for="special-instructions"></label>
+        <label for="special-instructions">Special Instructions:</label>
         <textarea name="special-instructions" id="special-instructions" cols="40" rows="5"></textarea>
         
         <input type="submit" value="Submit Order" id="form-submit">
