--- a/BountifulFoods/about.html
+++ b/BountifulFoods/about.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Bountiful Foods">
     <meta property="og:description" content="To sell people smoothies">
     <meta property="og:image" content="">
-    <meta property="og:url" content="https://dylanpeter.github.io/wdd230/">
+    <meta property="og:url" content="https://dylanpeter.github.io/wdd230/BountifulFoods/index.html">
     <meta property="og:type" content="website">
     <meta name="author" content="Dylan Petersen">
     <!-- favicon -->
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="nav-header">
                 <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-                <a href="index.html" class="logo">Bountiful Foods</a>
+                <a href="index.html" class="logo"></a>
             </div>
             <div class="nav-collapse" id="nav-collapse">
                 <ul class="nav-links">
