--- a/BountifulFoods/about.html
+++ b/BountifulFoods/about.html
@@ -18,17 +18,6 @@
 
 <!-- this is a comment -->
 <body>
-    <header>
-        <header class="bigpic">
-            <div class="container">
-                <div class="bigpicbehind">
-                    <h1>Welcome to Bountiful Foods!</h1>
-                    <p>We got the freshest smoothies in town!</p>
-                </div>
-            </div>
-        </header>
-    </header>
-
     <nav class="navigation">
         <div class="container">
             <div class="nav-header">
@@ -45,7 +34,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main id="grid">
 <!-- about us section -->
         <section class="about-us">
             <h1>About Us</h1>
@@ -54,24 +43,28 @@
                 With a commitment to quality and flavor, we strive to create a welcoming environment where health-conscious individuals can indulge in our delightful smoothie creations. 
                 Join us in our pursuit of wellness and taste the difference with Bountiful Foods.</p>
 <!-- about us images -->
-                <div class="about-images">
-                    <picture>
-                        <source srcset="./images/blueberry-smoothie-Small.webp" media="(max-width:500px)">
-                        <source srcset="./images/blueberry-smoothie-Medium.webp" media="(max-width:1000px)">
-                        <img loading="lazy" src="./images/blueberry-smoothie-Large.webp" alt="blueberry smoothie">
-                    </picture>
-                    <picture>
-                        <source srcset="./images/strawberry-banana-smoothie-Small.webp" media="(max-width:500px)">
-                        <source srcset="./images/strawberry-banana-smoothie-Medium.webp" media="(max-width:1000px)">
-                        <img loading="lazy" src="./images/strawberry-banana-smoothie-Large.webp" alt="straberry smoothie">
-                    </picture>
+                <div id="card" class="about-images">
+                    <div class="image-container">
+                        <picture>
+                            <source srcset="./images/blueberry-smoothie-Small.webp" media="(max-width:500px)">
+                            <source srcset="./images/blueberry-smoothie-Medium.webp" media="(max-width:1000px)">
+                            <img loading="lazy" src="./images/blueberry-smoothie-Large.webp" alt="blueberry smoothie">
+                        </picture>
+                    </div>
+                    <div class="image-container">
+                        <picture>
+                            <source srcset="./images/strawberry-banana-smoothie-Small.webp" media="(max-width:500px)">
+                            <source srcset="./images/strawberry-banana-smoothie-Medium.webp" media="(max-width:1000px)">
+                            <img loading="lazy" src="./images/strawberry-banana-smoothie-Large.webp" alt="straberry smoothie">
+                        </picture>
+                    </div>
                 </div>
             </section>
 <!-- google maps -->
-    <section class="google-map">
-        <h2>Our Location</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.0502443019197!2d-117.3502329848022!3d33.15809398129658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc6f6c123b6fc5%3A0x5c00bea52122d2a9!2sCarlsbad%2C%20CA%2C%20USA!5e0!3m2!1sen!2sin!4v1646252076150!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
+        <section class="google-map">
+            <h2>Our Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.0502443019197!2d-117.3502329848022!3d33.15809398129658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc6f6c123b6fc5%3A0x5c00bea52122d2a9!2sCarlsbad%2C%20CA%2C%20USA!5e0!3m2!1sen!2sin!4v1646252076150!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
