--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -18,15 +18,13 @@
 
 <!-- this is a comment -->
 <body>
-    <header>
-        <header class="hero">
-            <div class="container">
-                <div class="behind-hero">
-                    <h1>Bountiful Foods!</h1>
-                    <p>We got the freshest smoothies in town!</p>
-                </div>
+    <header class="hero">
+        <div class="container">
+            <div class="behind-hero">
+                <h1>Bountiful Foods!</h1>
+                <p>We got the freshest smoothies in town!</p>
             </div>
-        </header>
+        </div>
     </header>
 
     <nav class="navigation">
@@ -37,7 +35,7 @@
             </div>
             <div class="nav-collapse" id="nav-collapse">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <!-- <li><a href="index.html">Home</a></li> -->
                     <li><a href="order.html">Order</a></li>
                     <li><a href="about.html">About</a></li>
                     <!-- <li><a href="confirm.html">Confirm</a></li> -->
