--- a/BountifulFoods/confirmation.html
+++ b/BountifulFoods/confirmation.html
@@ -21,14 +21,14 @@
         <div class="container">
             <div class="nav-header">
                 <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-                <a href="index.html" class="logo">Bountiful Foods</a>
+                <a href="index.html" class="logo"></a>
             </div>
             <div class="nav-collapse" id="nav-collapse">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="order.html">Order</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="confirm.html">Confirm</a></li>
+                    <!-- <li><a href="confirm.html">Confirm</a></li> -->
                 </ul>
             </div>
         </div>
@@ -36,7 +36,6 @@
 <body>
     <!-- order confirmation -->
     <main class="confirm-container">
-        <section class="order-details">
             <section class="confirmation">
                 <h1>Order Confirmation</h1>
             </section>
@@ -83,7 +82,6 @@
         </section>
     </section>
     <!-- summary  -->
-    <section class="order-summary">
         <section class="card" id="order-info">
             <h3>Your order summary</h3>
             <h4>Fruit 1: <span id="fruit1"></span></h4>
@@ -94,13 +92,12 @@
         <section class="pay" id="payment-info">
             <h4>Total: <span id="random-number"></span></h4>
         </section>
-    </section>
     <!-- personal thanks -->
-<section class="personal-thanks" >
-    <p>Hey! Thanks for placing an order with us. 10% of all proceeds go towards the Feeding America charity! 
-        Each one us can make a difference in this world.
-    </p>
-</section>
+        <div class="personal-thanks" >
+            <p>Hey! Thanks for placing an order with us. 10% of all proceeds go towards the Feeding America charity! 
+                Each one us can make a difference in this world.
+            </p>
+        </div>
     </main>
         <footer class="footer">
             <div class="container">
