--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -46,9 +46,7 @@
 
     <div class="container">
         <section>
-            <h2 class="section-heading"></h2>
             <div class="grid">
-
                 <div class="card" id="card-info">
                     <h3> Santa Monica, CA</h3>
                     <h4>Population:</h4>
@@ -86,7 +84,6 @@
                                 <source srcset="./images/mango-smoothie-Medium.webp" media="(max-width:1000px)">
                                 <img loading="lazy" src="./images/mango-smoothie.webp" alt="mango smoothie">
                             </picture>
-                        </a>
                     </div>  
                 </div>
                 <!-- Order 2 -->
@@ -106,7 +103,8 @@
                             <div id="weather-forecast"> </div>
                         </div>
                     </div>
-                </div>  
+                </div>
+            </div>  
         </section>
     </div>
 <footer class="footer">
@@ -121,7 +119,7 @@
                     <p id="last-modified"></p>
                 </div>
                 <div class="socials">
-                    <p>Connect us:</p>
+                    <p>Connect with us:</p>
                     <ul>
                         <li><a href="https://www.facebook.com/">Facebook</a></li>
                         <li><a href="https://twitter.com/">Twitter</a></li>
