--- a/BountifulFoods/order.html
+++ b/BountifulFoods/order.html
@@ -17,23 +17,23 @@
 
 </head>
 
-<nav class="navigation">
-    <div class="container">
-        <div class="nav-header">
-            <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-            <a href="index.html" class="logo"></a>
-        </div>
-        <div class="nav-collapse" id="nav-collapse">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="order.html">Order</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="confirmation.html">Confirm</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 <body>
+    <nav class="navigation">
+        <div class="container">
+            <div class="nav-header">
+                <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
+                <a href="index.html" class="logo"></a>
+            </div>
+            <div class="nav-collapse" id="nav-collapse">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <!-- <li><a href="order.html">Order</a></li> -->
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="confirmation.html">Confirm</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <form action="confirmation.html" method="get">
 
         <input type="hidden" id="submitDate" name="submitDate">
