--- a/BountifulFoods/about.html
+++ b/BountifulFoods/about.html
@@ -28,8 +28,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="order.html">Order</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="confirm.html">Confirm</a></li>
+                    <!-- <li><a href="about.html">About</a></li> -->
+                    <!-- <li><a href="confirm.html">Confirm</a></li> -->
                 </ul>
             </div>
         </div>
