--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -31,7 +31,6 @@
         <div class="container">
             <div class="nav-header">
                 <button type="button" class="nav-toggle" id="nav-toggle">☰</button>
-                <a href="index.html" class="logo"></a>
             </div>
             <div class="nav-collapse" id="nav-collapse">
                 <ul class="nav-links">
@@ -48,7 +47,7 @@
         <section>
             <div class="grid">
                 <div class="card" id="card-info">
-                    <h3> Santa Monica, CA</h3>
+                    <h2> Santa Monica, CA</h2>
                     <h4>Population:</h4>
                     <p>89,947</p>     
                     <br>               
@@ -77,7 +76,7 @@
                 <!-- Drinks order number  -->
                 <div class="card">
                     <h3 id="special">Drinks Ordered:</h3>
-                    <p id="drinks-ordered"></p>
+                    <div id="drinks-ordered"></div>
                     <div class="card">
                             <picture>
                                 <source srcset="./images/mango-smoothie-Large.webp" media="(max-width:500px)">
