final bug fixes

--- a/BountifulFoods/index.html
+++ b/BountifulFoods/index.html
@@ -48,10 +48,10 @@
             <div class="grid">
                 <div class="card" id="card-info">
                     <h2> Santa Monica, CA</h2>
-                    <h4>Population:</h4>
+                    <h3>Population:</h3>
                     <p>89,947</p>     
                     <br>               
-                    <h4>Average Temperature:</h4>
+                    <h3>Average Temperature:</h3>
                     <p>64 °F</p>
                     <br>
                     <h4>Attractions:</h4>
@@ -71,7 +71,9 @@
                         </picture>
                     </a>
                     <h3>Create Your Own Drink</h3>
-                    <button class="order-button" onclick="window.location.href = './order.html'">Order</button>
+                    <div id="button-container">
+                        <button class="order-button" onclick="window.location.href = './order.html'">Order</button>
+                    </div>
                 </div>
                 <!-- Drinks order number  -->
                 <div class="card">
